--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,7 @@
     <form th:action="@{/user/perform_login}" method="post">
         <h2 class="text-center">Log in</h2>
         <p th:if="${param.error}" class="text-danger">Invalid user or password</p>
+        <p th:if="${param.logout}" class="text-info">Logged out</p>
         <p th:if="${param.registered}" class="text-success">User registered, now Log in</p>
         <div class="form-group">
             <div class="input-group">
