--- a/src/main/resources/templates/add-car-model.html
+++ b/src/main/resources/templates/add-car-model.html
@@ -10,6 +10,17 @@
             background-color: #f5f5f5;
         }
 
+        .nav-container {
+            width: 90%;
+            margin: 8px auto;
+            font-size: 15px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
+            padding: 30px;
+            display:flex
+        }
+
         .login-form {
             width: 340px;
             margin: 50px auto;
@@ -44,9 +55,48 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="nav-container">
+        <a class="navbar-brand" href="#">Auto auctions</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/report/add">Add auction</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Cars
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/car/manufacturer">Add manufacturer</a>
+                        <a class="dropdown-item" href="/car/engine">Add engine</a>
+                        <a class="dropdown-item" href="/car/transmission">Add transmission</a>
+                        <a class="dropdown-item" href="/car/drivetrain">Add drivetrain</a>
+                        <a class="dropdown-item" href="/car/model">Add car model</a>
+                        <a class="dropdown-item" href="/car">Add car</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <form th:action="@{/user/logout}" method="post">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <button  class="mr-1 btn" type="submit"><i class="fas fa-sign-out-alt"></i> Logout</button>
+        </form>
+    </div>
+</nav>
+
 <div class="login-form">
     <form th:action="@{/car/model}" method="POST">
         <h2 class="text-center">Add car model</h2>
+        <p th:if="${param.error}" class="text-danger">Car model already exists!</p>
         <p th:if="${param.success}" class="text-success">Car model added!</p>
         <div class="form-group">
             <div class="input-group">
